# camsource

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  camsource.conf.example  config.h.in  configure  configure.ac  mkinstalldirs
scripts/: camsource2bmp.pl
src/: Makefile.am  Makefile.in  bw.c  configfile.c  configfile.h  filewrite.c  filewrite.h  filter.c  filter.h  flip.c  ftpup.c  ftpup.h  grab.c  grab.h  http.c  http.h  image.c  image.h  input_v4l.c  input_xwd.c  invert.c  jpeg.c  jpeg.h  log.c  log.h  main.c  main.h  mod_handle.c  mod_handle.h  module.h  motiondetect.c  regrab.c  resize.c  rgbbgr.c  rotate.c  socket.c  socket.h  text.c  text.h  unpalette.c  (+7 more)
